--- a/javascript/building-blocks/allowance-updater.html
+++ b/javascript/building-blocks/allowance-updater.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Allowance updater example</title>
+    <title>零花钱更新器示例</title>
   </head>
   <body>
-    <label for="shopping-check">Has the shopping been done? </label>
+    <label for="shopping-check">酱油买回来了吗？</label>
     <input type="checkbox" id="shopping-check">
 
     <p></p>
@@ -14,8 +14,9 @@
       const checkBox = document.querySelector('input');
       const para = document.querySelector('p');
       let shoppingDone = false;
+      let childsAllowance = 5;
 
-      checkBox.addEventListener('change',function() {
+      checkBox.addEventListener('change', function() {
         checkBox.disabled = true;
         shoppingDone = true;
         updateAllowance();
@@ -23,12 +24,10 @@
 
       function updateAllowance() {
         if(shoppingDone === true) {
-          var childsAllowance = 10;
-        } else {
-          var childsAllowance = 5;
+          childsAllowance = 10;
         }
 
-        para.textContent = 'Child has earned $' + childsAllowance + ' this week.';
+        para.textContent = '本周小孩儿挣了 ' + childsAllowance + ' 元零花钱。';
       }
 
       updateAllowance();
