--- a/html/forms/week-example/index.html
+++ b/html/forms/week-example/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>一周的示例</title>
+    <title>第几周的示例</title>
     <style>
       div {
         margin-bottom: 10px;
