--- a/javascript/introduction-to-js-1/tasks/variables/variables3.html
+++ b/javascript/introduction-to-js-1/tasks/variables/variables3.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Variables: Task 3</title>
+    <title>变量：任务3</title>
     <link rel="stylesheet" href="../styles.css" />
     <style>
       * {
@@ -25,14 +25,15 @@
 
     <textarea class="playable playable-js" style="height: 220px;">
 
-// Add your code here
+// 在下方编写代码
+
 
 const myName = 'Default';
 myName = 'Chris'
 
 let myAge = '42';
 
-// Don't edit the code below here!
+// 不要编写此行以下的代码！
 
 section.innerHTML = ' ';
 let para1 = document.createElement('p');
