--- a/javascript/introduction-to-js-1/tasks/variables/variables1-download.html
+++ b/javascript/introduction-to-js-1/tasks/variables/variables1-download.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hans">
   <head>
     <meta charset="utf-8"/>
-    <title>Variables: Task 1</title>
+    <title>变量：任务1</title>
     <style>
       p {
         color: purple;
@@ -26,9 +26,9 @@
 
   </body>
   <script>
-    // Add your code here
+    // 在下方编写代码
 
-    // Don't edit the code below here!
+    // 不要编写此行以下的代码！
 
     const section = document.querySelector('section');
 
