--- a/javascript/introduction-to-js-1/tasks/variables/variables3-download.html
+++ b/javascript/introduction-to-js-1/tasks/variables/variables3-download.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hans">
   <head>
     <meta charset="utf-8"/>
-    <title>Variables: Task 3</title>
+    <title>变量：任务3</title>
     <style>
       p {
         color: purple;
@@ -26,21 +26,21 @@
 
   </body>
   <script>
-    // Add your code here
+    // 在下方编写代码
 
     const myName = 'Default';
-    myName = 'Chris'
+    myName = '李雷'
 
     let myAge = '42';
 
-    // Don't edit the code below here!
+    // 不要编写此行以下的代码！
 
     const section = document.querySelector('section');
 
     let para1 = document.createElement('p');
     let para2 = document.createElement('p');
     para1.textContent = myName;
-    para2.textContent = `In 20 years, I will be ${myAge + 20}`;
+    para2.textContent = `20年后我 ${myAge + 20} 岁。`;
     section.appendChild(para1);
     section.appendChild(para2);
   </script>
