--- a/javascript/introduction-to-js-1/what-is-js/apply-javascript.html
+++ b/javascript/introduction-to-js-1/what-is-js/apply-javascript.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-Hans">
   <head>
     <meta charset="utf-8">
     <title>使用 JavaScript 的示例</title>
