--- a/html/tables/assessment-finished/planets-data.html
+++ b/html/tables/assessment-finished/planets-data.html
@@ -13,6 +13,7 @@
       <colgroup>
         <col span="2">
         <col style="border: 2px solid black">
+        <col span="10">
       </colgroup>
       <thead>
         <tr>
