1. localize; 2. remove useless styles

--- a/javascript/introduction-to-js-1/tasks/variables/variables1-download.html
+++ b/javascript/introduction-to-js-1/tasks/variables/variables1-download.html
@@ -1,40 +1,27 @@
 <!DOCTYPE html>
-<html lang="zh-Hans">
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8"/>
     <title>变量：任务1</title>
-    <style>
-      p {
-        color: purple;
-        margin: 0.5em 0;
-      }
-
-      * {
-        box-sizing: border-box;
-      }
-    </style>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="https://roy-tian.github.io/learning-area/javascript/introduction-to-js-1/tasks/styles.css" />
   </head>
 
   <body>
 
-    <section class="preview">
-
-
-
-    </section>
+    <section class="preview"></section>
 
   </body>
   <script>
     // 在下方编写代码
 
+
     // 不要编写此行以下的代码！
 
     const section = document.querySelector('section');
 
-    let para1 = document.createElement('p');
+    const para1 = document.createElement('p');
     para1.textContent = myName;
-    let para2 = document.createElement('p');
+    const para2 = document.createElement('p');
     para2.textContent = myAge;
     section.appendChild(para1);
     section.appendChild(para2);
