--- a/javascript/introduction-to-js-1/tasks/variables/variables1.html
+++ b/javascript/introduction-to-js-1/tasks/variables/variables1.html
@@ -1,31 +1,18 @@
 <!DOCTYPE html>
-<html lang="zh-Hans">
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8" />
     <title>变量：任务1</title>
     <link rel="stylesheet" href="../styles.css" />
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-
-      p {
-        color: purple;
-        margin: 0.5em 0;
-      }
-    </style>
   </head>
 
   <body>
-    <section class="preview">
+    <section class="preview"></section>
 
-
-
-    </section>
-
-    <textarea class="playable playable-js" style="height: 220px;">
-
+    <textarea class="playable playable-js" style="height: 300px;">
 // 在下方编写代码
+
+
 
 // 不要编写此行以下的代码！
 
@@ -42,6 +29,6 @@ section.appendChild(para2);
       <input id="reset" type="button" value="Reset" />
     </div>
   </body>
-  <script class="editable"></script>
-  <script src="../playable.js"></script>
+  <script defer class="editable"></script>
+  <script defer src="../playable.js"></script>
 </html>
