--- a/javascript/introduction-to-js-1/tasks/variables/variables2-download.html
+++ b/javascript/introduction-to-js-1/tasks/variables/variables2-download.html
@@ -1,34 +1,20 @@
 <!DOCTYPE html>
-<html lang="zh-Hans">
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8"/>
     <title>变量：任务2</title>
-    <style>
-      p {
-        color: purple;
-        margin: 0.5em 0;
-      }
-
-      * {
-        box-sizing: border-box;
-      }
-    </style>
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="https://roy-tian.github.io/learning-area/javascript/introduction-to-js-1/tasks/styles.css" />
   </head>
 
   <body>
 
-    <section class="preview">
-
-
-
-    </section>
+    <section class="preview"></section>
 
   </body>
   <script>
     // 在下方编写代码
 
-    let myName = 'Paul';
+    let myName = '李雷';
 
     // 不要编写此行以下的代码！
 
