--- a/javascript/introduction-to-js-1/tasks/variables/variables2.html
+++ b/javascript/introduction-to-js-1/tasks/variables/variables2.html
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
-<html lang="zh-Hans">
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8" />
     <title>变量：任务2</title>
     <link rel="stylesheet" href="../styles.css" />
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-
-      p {
-        color: purple;
-        margin: 0.5em 0;
-      }
-    </style>
   </head>
 
   <body>
-    <section class="preview">
-
-
-
-    </section>
+    <section class="preview"></section>
 
     <textarea class="playable playable-js" style="height: 220px;">
 
 // 在下方编写代码
 
-let myName = 'Paul';
+let myName = '李雷';
 
 // 不要编写此行以下的代码！
 
