--- a/javascript/introduction-to-js-1/tasks/variables/variables3-download.html
+++ b/javascript/introduction-to-js-1/tasks/variables/variables3-download.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-Hans">
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8"/>
     <title>变量：任务3</title>
@@ -31,7 +31,7 @@
     const myName = 'Default';
     myName = '李雷'
 
-    let myAge = '42';
+    let myAge = '18';
 
     // 不要编写此行以下的代码！
 
